<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#FAFAFA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_a"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vsText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/vsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toTopOf="@id/teamA"
        app:layout_constraintBottom_toBottomOf="@id/teamA"
        app:layout_constraintStart_toEndOf="@id/teamA"
        app:layout_constraintEnd_toStartOf="@id/teamB"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginHorizontal="24dp" />

    <TextView
        android:id="@+id/teamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_b"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/vsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/teamA" />

    <TextView
        android:id="@+id/scoreA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_a"
        android:textSize="54sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/teamA"
        app:layout_constraintStart_toStartOf="@id/teamA"
        app:layout_constraintEnd_toEndOf="@id/teamA"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/scoreB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_b"
        android:textSize="54sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintTop_toBottomOf="@id/teamB"
        app:layout_constraintStart_toStartOf="@id/teamB"
        app:layout_constraintEnd_toEndOf="@id/teamB"
        android:layout_marginTop="28dp" />

    <LinearLayout
        android:id="@+id/buttonsA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/scoreA"
        app:layout_constraintStart_toStartOf="@id/teamA"
        app:layout_constraintEnd_toEndOf="@id/teamA"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnPlusA"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus"
            android:textSize="22sp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnMinusA"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus"
            android:textSize="22sp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonsB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/scoreB"
        app:layout_constraintStart_toStartOf="@id/teamB"
        app:layout_constraintEnd_toEndOf="@id/teamB"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnPlusB"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus"
            android:textSize="22sp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnMinusB"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus"
            android:textSize="22sp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/vsText"
        app:layout_constraintBottom_toTopOf="@id/madeByText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/madeByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_by"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:letterSpacing="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
